Fix alignment issues in header when adding font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,7 +426,7 @@ footer {
     }
 
     #logo {
-        font-size: 210%;
+        font-size: 190%;
         padding: 5px;
     }
 
